[package]
name = "solana_transaction_client"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.16.0"
solana-client = "1.16.0"
solana-transaction-status = "1.16.0"
tokio = { version = "1.28.0", features = ["full"] }
anyhow = "1.0.71"
thiserror = "1.0.40"
log = "0.4.17"
env_logger = "0.10.0"
clap = { version = "4.3.0", features = ["derive"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
metrics = "0.21.0"
metrics-exporter-prometheus = "0.12.1"
rand = "0.8.5"
